YH-418: Fixed wrapping text on <pre>

--- a/src/shared/ui/TextHtml/ui/TextHtml.module.css
+++ b/src/shared/ui/TextHtml/ui/TextHtml.module.css
@@ -1,5 +1,9 @@
+.text {
+  white-space: pre-wrap;
+}
+
 .text code {
   padding: 5px;
   border-radius: 12px;
-  background-color: var(--background-nav-item);
+  background-color: var(--background-nav-item);	
 }
